added some crawler stuff for file pruning